--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0"
   },
   "config": {
     "commitizen": {
