--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/node": "^18.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
   },
