--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@types/express": "^4.17.13",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.1.0",
     "husky": "^8.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
